differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr84945.c-4.8.2-2.out.txt
pr84945.c: In function ‘main’:
pr84945.c:9:3: error: Parameter to builtin not valid: avx512f
   if (!__builtin_cpu_supports ("avx512f")
   ^
pr84945.c:10:7: error: Parameter to builtin not valid: avx512vnni
       && (__builtin_cpu_supports ("avx512vnni")
       ^
pr84945.c:11:4: error: Parameter to builtin not valid: avx512bitalg
    || __builtin_cpu_supports ("avx512bitalg")))
    ^
